# mckenna-derby

./: .env.example  .gitignore  AGENTS.md  AI_RUNBOOK.md  AI_SESSION_MEMORY.md  DEPLOY_STREAMLIT.md  PLAN.md  README.md  dashboard.py  prereg.json  pyproject.toml  requirements.txt  run_analysis.py  run_mckenna.py  simplemem_cli.py  simplemem_client.py  skills-lock.json
.cursor/: context7-libraries.md
.cursor/rules/: simplemem.mdc
.streamlit/: config.toml  secrets.toml.example
crewai/: .env.example  README.md  pyproject.toml
crewai/src/planner_crew/: crew.py  main.py
crewai/src/planner_crew/config/: agents.yaml  tasks.yaml
docs/: FREE_DATASETS.md
docs/simplemem/: memories.json
mckenna_derby/: __init__.py  backtest.py  calendar_windows.py  compare.py  data.py  mckenna_engine.py  novelty.py  report.py  timewave.py  tour.py
mckenna_derby.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mckenna_derby/assets/: __init__.py
mckenna_derby/datasets/: README.md  __init__.py  exotic_dividends.example.csv  hk_runners.csv
mckenna_derby/wavesets/: __init__.py
output/: REAL_DATA_RESULTS.md
scripts/: build_bundled_data.py  build_bundled_uk.py  exploratory_edge_hunt.py  exploratory_win_place_poke.py  import_renavon_dividends.md  probe_hkjc_localresults.py  remap_renavon_dividends.py  start-dashboard.sh
tests/: test_backtest.py  test_calendar_windows.py  test_compare.py  test_dashboard.py  test_data.py  test_mckenna_engine.py  test_novelty.py  test_timewave.py  test_tour.py
