[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mckenna-derby"
version = "0.2.0"
description = "Horse-racing novelty analysis vs Timewave Zero"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "streamlit>=1.40",
    "plotly>=5.18",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["mckenna_derby*"]

[tool.setuptools.package-data]
"mckenna_derby.wavesets" = ["*.txt"]
"mckenna_derby.datasets" = ["*.csv", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
