[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mckenna-derby-planner"
version = "0.1.0"
description = "CrewAI planner for McKenna Derby implementation plans"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.14.0",
    "python-dotenv>=1.0",
]

[project.scripts]
run_crew = "planner_crew.main:run"

[tool.crewai]
type = "crew"

[tool.setuptools.packages.find]
where = ["src"]
